syntax = "proto3";
package Core.Backend;

message Song {
    string externalUrl = 1;
    string name = 2;
    string cover = 3;
    string artist = 4;
    string songId = 5;
}